bin_PROGRAMS = nvstusb-extractfw nvstusb-vsync nvstusb-quad
nvstusb_extractfw_SOURCES = extractfw.c
nvstusb_extractfw_CFLAGS = -I@top_srcdir@/include 
nvstusb_vsync_SOURCES = test_vsync.c
nvstusb_vsync_CFLAGS = -I@top_srcdir@/include ${GL_CFLAGS}
nvstusb_vsync_LDADD = -lglut ${GL_LIBS} -lm
nvstusb_quad_SOURCES = nvstusb_quad.c
nvstusb_quad_CFLAGS = -I@top_srcdir@/include ${ILUT_CFLAGS} ${IL_CFLAGS}
nvstusb_quad_LDADD = @top_builddir@/src/libnvstusb.la ${ILUT_LIBS} ${IL_LIBS} -lglut ${GL_LIBS} ${LIBUSB_LIBS} ${X11_LIBS}
